--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="background-color: #6c757d;">
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="my-second-bootstrap-page.html">The Game of Hockey</a>
+          <a class="navbar-brand" href="index.html">The Game of Hockey</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -29,8 +29,7 @@
         </div>
       </nav>
 <div class="container-fluid p-5 bg-primary text-black text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
- 
-    <h1>The Game of Hockey</h1>
+  <h1>The Game of Hockey</h1>
   <h5>The site of all things hockey!</h5>   
 </div>
   
