--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         </div>
       </nav>
 <div class="container-fluid p-5 bg-primary text-black text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
-  <h1> <mark style="background-color: white>The Game of Hockey </mark> </h1>
-  
+  <h1>The Game of Hockey </h1>
   <h5>The site of all things hockey!</h5>   
 </div>
   
