--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
         </div>
       </nav>
-<div class="container-fluid p-5 bg-primary text-black text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
+<div class="container-fluid p-5 bg-primary text-blue text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
   <h1>The Game of Hockey </h1>
   <h5>The site of all things hockey!</h5>   
 </div>
