--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <h1>
     <mark style="background-color: white; color: black;">Game of Hockey </mark> 
   </h1>
-  <h5>The site of all things hockey!</h5>   
+  <h5>
+   <mark style="background-color: white; color: black;">The site of all things hockey!</mark> 
+  </h5>   
 </div>
   
 <div class="container-fluid">
