highlight on games page

--- a/games.html
+++ b/games.html
@@ -30,8 +30,12 @@
       </nav>
 <div class="container-fluid p-5 bg-primary text-black text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
     
-  <h1>The Game of Hockey</h1>
-  <h5>The site of all things hockey!</h5> 
+  <h1>
+    <mark style="background-color: white; color: black;">Game of Hockey</mark> 
+  </h1>
+  <h5>
+    <mark style="background-color: white; color: black;">site of all things hockey!</mark> 
+  </h5> 
 </div>
 
 <iframe src="https://www.nhl.com/news/inside-look-at-boston-bruins/c-345495864" width="100%" height="500" style="border: 1px solid black;"></iframe>
