change in title text

--- a/trivia.html
+++ b/trivia.html
@@ -31,10 +31,10 @@
 <div class="container-fluid p-5 bg-primary text-black text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
     
   <h1>
-    <mark style="background-color: white; color: black;">Game of Hockey</mark> 
+    <mark style="background-color: white; color: black;"> The Game of Hockey</mark> 
   </h1>
   <h5>
-    <mark style="background-color: white; color: black;">site of all things hockey!</mark> 
+    <mark style="background-color: white; color: black;"> a site of all things hockey!</mark> 
   </h5> 
   </div>
   <div class="panel">
