--- a/teams-and-players.html
+++ b/teams-and-players.html
@@ -34,7 +34,7 @@
     <mark style="background-color: white; color: black;"> The Game of Hockey</mark> 
   </h1>
   <h5>
-    <mark style="background-color: white; color: black;"> a site of all things hockey!</mark> 
+    <mark style="background-color: white; color: black;"> The site of all things hockey!</mark> 
   </h5> 
 </div>
 
