put opacity in the highlight

--- a/trivia.html
+++ b/trivia.html
@@ -34,7 +34,7 @@
     <mark style="background-color: white; color: black;"> The Game of Hockey</mark> 
   </h1>
   <h5>
-    <mark style="background-color: white; color: black;"> The site of all things hockey!</mark> 
+    <mark style="background-color: rgba(255, 255, 255, .5); color: black;"> The site of all things hockey!</mark> 
   </h5> 
   </div>
   <div class="panel">
