--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       </nav>
 <div class="container-fluid p-5 bg-primary text-black text-center" style="background-image: url('hockey-images/ice-rink.jpeg'); background-size: cover; background-position: center;">
   <h1>
-    <mark style="background-color: white; color: black;"> The Game of Hockey </mark> 
+    <mark style="background-color: rgba(255, 255, 255, .5); color: black;"> The Game of Hockey </mark> 
   </h1>
   <h5>
-   <mark style="background-color: white; color: black;">The site of all things hockey!</mark> 
+   <mark style="background-color: rgba(255, 255, 255, .5); color: black;">The site of all things hockey!</mark> 
   </h5>   
 </div>
   
